--- a/Task#2/index.html
+++ b/Task#2/index.html
@@ -3,14 +3,42 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CSS Framework</title>
+
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<h1>Добро пожаловать</h1>
 
-	<div id='red-block' class='div class_name' style="background: red; top: 340px;" >Красный блок</div>
-	<div class='class_name' name="div">Синий блок</div>
-	<div id="div" class='class_name'>Желтый блок</div>
+	<div class="row">
+		<div>Красный блок</div>
+		<div>Синий блок</div>
+		<div>Желтый блок</div>
+	</div>		
 
-	<script src="common.js"></script>
+	<div>
+
+		<h3>Все эти стили были установлены с помощью workWithDom Framework v.0.0.1</h3>
+
+		<div>
+			<div>
+				<h3>Что может этот фрейморк?</h3>
+			</div>
+			<div>	    
+				<li>Найти элемент по: id, name, tag, class, elem, allElem. Используйте метод findBy(type, elem)</li>
+				<li>Найти элемент используя XPath. Используйте метод findByX(path)</li>
+				<li>Добавить класс. addClass(newClass) или удалить класс removeClass(deleteClass)</li>
+				<li>Получить стили css. getCSS(type)</li>
+				<li>Установить стиль css. setCSS(type, value)</li>	
+				<li>Используйте привычный синтаксис с использованием цепочек цепочек вызовов (chaining)</li>	
+				<li>Пример использования с XPath: wwd.findByX('div[1]/div[3]').addClass('col-md-4').setCSS('height', '300px').setCSS('background-color', 'yellow')</li>
+				<li>Пример использования без XPath: wwd.findBy('allElem', 'li').addClass('list-group-item')</li>
+			</div>
+		</div>
+
+	</div>
+
+
+	<script src="wwdFramework.js"></script>
+	<script src="test.js"></script>
 </body>
 </html>
