add documenation. fix some bugs

--- a/Task#1/index.html
+++ b/Task#1/index.html
@@ -20,7 +20,7 @@
 
 			<div class="alert alert-danger" role="alert"> 
 				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-				Используйте консоль браузера для добавления пунктов в маршрут
+				Используйте консоль браузера или файл test.js для добавления пунктов в маршрут
 			</div>
 
 			<ul id="travelList" class="list-group"></ul>
