--- a/Task#2/index.html
+++ b/Task#2/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Добро пожаловать</h1>
 
-	<div class="row">
+	<div>
 		<div>Красный блок</div>
 		<div>Синий блок</div>
 		<div>Желтый блок</div>
